--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -23,6 +23,7 @@
   top: 0;
   z-index: 1000;
   border: 2px solid #0056b3; /* Border added back to navbar */
+  border-radius: 80px;
 }
 
 .app-name {
