--- a/src/Components/Main/Cred.css
+++ b/src/Components/Main/Cred.css
@@ -9,6 +9,8 @@
   display: flex;
   flex-direction: column;
   min-height: 80vh;
+  max-height: 80vh; /* Set a maximum height */
+  overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .cred-header {
@@ -50,34 +52,16 @@
 }
 
 /* Adjusting back button placement */
-.back-button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start; /* Aligns the content to the left */
-  margin-top: 20px;
-  align-self: flex-start; /* Moves button to the left end */
-}
-
-.back-button:hover {
-  background-color: #0056b3;
-}
-
-.back-icon {
-  margin-right: 8px;
+.back {
+ width: 80px;
+ border-radius: 20px;
 }
 
 /* Ensure page doesn't scroll */
 body, html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 /* Responsive styling */
